# -ska-oso-tmc-integration-tests

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .release  16jan_sa_error.txt  17jan_cn.txt  17jan_csp_sa.txt  17jan_mocks.txt  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  Dockerfile  KUBECONFIG  LICENSE  Makefile  README.md  alarmhandler.mk  cn1  cspsnlogs  dish1  example.txt  gilab_values.yaml  logs.txt  mock17  p1  pyproject.toml  sdp201  sdp_logs.txt  sdp_sn1  sn11  sn16  sn17  sn20_1  sn20_10  sn20_11  sn20_12  (+9 more)
.gitlab/ci/: ska-low.gitlab-ci.yml  ska-mid.gitlab-ci.yml
charts/: dish_lmc_values.yml  sdp_values.yml
charts/ska-oso-devpod/: Chart.yaml  values.yaml
charts/ska-oso-tmc-integration-tests/: Chart.yaml  values.yaml
charts/ska-oso-tmcsim/: Chart.yaml  values.yaml
charts/ska-tmc/: Chart.yaml  values.yaml
charts/ska-tmc-common/: Chart.yaml
charts/ska-tmc-dish-lmc/: Chart.yaml  values.yaml
charts/ska-tmc-low/: Chart.yaml  values.yaml
charts/ska-tmc-mid/: Chart.yaml  values.yaml
charts/ska-tmc-mid-umbrella/: Chart.yaml  values.yaml
charts/ska-tmc-testing/: Chart.yaml  values.yaml
charts/ska-tmc-testing-low/: Chart.yaml  values.yaml
charts/ska-tmc-testing-mid/: Chart.yaml  values.yaml
charts/test-parent/: Chart.yaml  values.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/src/: conf.py  index.rst  tmc_api.rst
eda_configuration/: tmc_mid_attributes.yaml
src/ska_oso_tmcsim/: __init__.py  centralnode.py  subarraynode.py  testharness.py
tests/: .release  __init__.py  conftest.py  helper_dish_device.py  pytest.ini  requirements.txt  resources  test_tmc_sdp_assign_resources.py  test_tmc_sdp_release_resources.py  xray-config.json
tests/alarm_handler/: test_alarm_configurator_api.py  test_alarm_configurator_dishvcc.py  test_configure_alarms.py  test_configure_alarms_invalid_rules.py  test_configure_alarms_with_multiple_rule_files.py  test_dishvcc_alarm_configurator.py
tests/availablity/: test_telescopeon_availablity_mid.py
tests/check_command_allowed/: test_command_not_allowed_assigning_resources.py  test_command_not_allowed_empty.py  test_command_not_allowed_idle.py  test_command_not_allowed_ready.py
tests/component/: __init__.py  test_centralnode.py  test_subarraynode.py
tests/data/: command_AssignResources.json  command_AssignResources_2.json  command_AssignResources_invalid_sdp.json  command_Configure_2.json  command_Configure_3.json  command_Configure_invalid1.json  command_Configure_invalid2.json  command_Configure_invalid4.json  command_Configure_invalid5.json  command_Configure_low.json  command_Configure_missing_config_id.json  command_Configure_missing_frequency_slice_id.json  command_Configure_missing_integration_factor.json  command_Configure_missing_zoom_factor.json  command_ReleaseResources.json  command_Scan_2.json  command_Scan_3.json  command_assign_resource_low.json  command_assign_resources_invalid_receptor_id.json  command_invalid_assign.json  command_invalid_assign_release.json  command_scan_low.json  invalid_assign_json1.json  invalid_assign_json2.json  invalid_assign_json_without_channel_keys.json  invalid_assign_json_without_receiptor_id.json  multiple_assign1.json  multiple_configure1.json  multiple_configure2.json
tests/dish_vcc_configuration/: test_load_dish_cfg.py  test_load_dish_cfg_negative_scenario.py  test_xtp-30258_dishln_kval_identical.py  test_xtp-30259_dishln_kval_not_identical.py  test_xtp-30260_dishln_kval_not_set.py
tests/features/: assign_resources_csp_sdp_subarray_failure_scenarios.feature  assign_resources_csp_subarray_failure_scenarios.feature  assign_resources_sdp_subarray_failure_scenarios.feature  assign_resources_subsystem_failure_scenarios.feature  check_abort_command.feature  check_command_not_allowed.feature  check_configure_command.feature  check_configure_command_on_real_dish.feature  check_end_command.feature  check_invalid_json_not_allowed.feature  check_off_command_on_real_dish.feature  check_on_command_on_real_dish.feature  check_scan_command.feature  configure_csp_sdp_subarray_failure_scenario.feature  configure_csp_subarray_failure_scenarios.feature  configure_sdp_subarray_failure_scenario.feature  dishln_kvalue_validation.feature  duplicate_pb_id.feature  incremental_assign_csp_sdp_subarray_failure.feature  incremental_assign_resources_csp_subarray_failure.feature  incremental_assign_resources_sdp_subarray_failure.feature  sdp_exception.feature  (+41 more)
(+575 files in other folders)
