[tool.poetry]
name = "ska-oso-tmc-integration-tests"
version = "0.2.1"
description = "Repository for integration of OSO and TMC"
authors = ["Team Buttons"]
license = "BSD-3-Clause"

include = [
    { path = 'tests' }
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[[tool.poetry.source]]
name = "gitlab-oso-scripting"
url = "https://gitlab.com/api/v4/projects/22057734/packages/pypi/simple"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pydantic = "^2.7.1"
pytango = "^9.5.1"
python-statemachine = "^2.2.0"
ska-control-model = "^0.3.4"
ska-ser-logging = "^0.4.3"
ska-tango-testing = "^0.7.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
ska-ser-sphinx-theme = "^0.1.3"
python-statemachine = "^2.2.0"
ska-control-model = "^0.3.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
pylint-junit = "^0.3.4"
typing-extensions = "^4.11.0"
pytest-forked = "^1.6.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
