[tool.poetry]
name = "ska-oso-tmc-integration-tests"
version = "0.3.0"
description = "Repository for integration of OSO and TMC"
authors = ["Team Buttons"]
license = "BSD-3-Clause"

include = [
    { path = 'tests' }
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pytango = "^9.5.1"
python-statemachine = "^2.2.0"
ska-control-model = "*"
ska-ser-logging = "^0.4.3"
ska-tango-testing = "^0.7.1"
pydantic = "^2.10.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
ska-ser-sphinx-theme = "^0.1.3"
python-statemachine = "^2.2.0"
ska-control-model = "*"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
pylint-junit = "^0.3.4"
typing-extensions = "^4.11.0"
pytest-forked = "^1.6.0"
pytest-bdd = "^7.2.0"
# NOTE: When updating ska-oso-scripting version, also update the submodule
# to the correct tag (see Update submodules section in README)
ska-oso-scripting = "^10.2.0-rc.4"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | submodules
    | tests/resources
    | tests/integration/data/scripts
  )/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [
    "submodules",
    "tests/resources",
    "tests/integration/tests/tmcmid/conftest.py"
]

[tool.pylint]
disable = "C,R,W3101,W0511"
ignore = [
    "conftest.py"
]

[tool.pytest.ini_options]
bdd_features_base_dir = "tests/integration/features/"
markers = [
    "realtmc: tests using real TMC-Mid test harness",
    "SKA_mid: tests that target SKA-Mid",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
